# Basic-Transformer

./: .gitignore  README.md  eval_dev.sh  eval_test.sh  get_best_lqmt.py  get_best_lqmt.sh  mteval.sh  predict.archi0.sh  predict.archi1.sh  predict.archi1a.sh  predict.archi1a_div.sh  predict.archi1b.sh  predict.archi1c.sh  pyproject.toml
analyze/: sentence_bleu.py  vocab_statistic.csv  vocab_statistic.py
conf/: config.yaml
conf/ex/: aspec.enja.baseline.100k.yaml  aspec.enja.baseline.1m.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top1.archi0.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top1.archi1.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top1.archi1a.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top2.archi0.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top2.archi1.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top2.archi1a.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top3.archi1a.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top4.archi0.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top4.archi1.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top4.archi1a.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top8.archi0.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top8.archi1.yaml  aspec.enja.nfr.ed.enh100k_to_enh100k.top8.archi1a.yaml  aspec.enja.nfr.labse.enh100k_to_jah2m.top1.archi0.yaml  aspec.enja.nfr.labse.enh100k_to_jah2m.top1.archi1.yaml  aspec.enja.nfr.labse.enh100k_to_jah2m.top1.archi1a.yaml  aspec.enja.nfr.labse.enh100k_to_jah2m.top1.archi1b.yaml  aspec.enja.nfr.labse.enh100k_to_jah2m.top1.archi1c.yaml  aspec.enja.nfr.labse.enh100k_to_jah2m.top1.archi2.yaml  (+58 more)
vocab/: aspec_vocab.pt
(+105 files in other folders)
